feat(schedule): create class session entity